--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/fa62c117c7.js" crossorigin="anonymous"></script>
-  <link rel="icon" type="image/x-icon" href="/icons/Screenshot 2024-07-24 113355.png">
+  <!-- <link rel="icon" type="image/x-icon" href="/icons/Screenshot 2024-07-24 113355.png"> -->
   <link rel="stylesheet" href="/styles.css" />
   <script src="https://kit.fontawesome.com/4938320a9b.js" crossorigin="anonymous"></script>
-  <title>Raj Aryan</title>
+  <title>Tuan Linh - Portfolio</title>
 </head>
 
 <body class="light" id="top">
   <header class="header center">
     <h3>
-      <a href="/" class="link">RA.</a>
+      <a href="/" class="link">Tuan Linh</a>
     </h3>
 
     <nav class="nav center">
