add visiters count

--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
       <!-- hitwebcounter Code START -->
 
       <a href="https://www.hitwebcounter.com" target="_blank">
-        <img <img
-          src="https://hitwebcounter.com/counter/counter.php?page=15087180&style=0008&nbdigits=5&type=ip&initCount=50"
+        <img
+          src="https://hitwebcounter.com/counter/counter.php?page=15607878&style=0001&nbdigits=5&type=page&initCount=0"
           title="Counter Widget" Alt="Visit counter For Websites" border="0" /></a>
 
       Visitors
