--- a/index.html
+++ b/index.html
@@ -125,15 +125,15 @@
 
 
         <div class="project">
-          <h3>Portfolio Website</h3>
-          <p class="project__description">
+          <h3>Comming Soon ...</h3>
+         <!-- <p class="project__description">
             Built with HTML and CSS, my portfolio website highlights my projects and skills in a sleek, user-friendly
             interface. Explore my work and achievements in a visually appealing environment.
           </p>
           <ul class="project__stack">
             <li class="project__stack-item">HTML</li>
             <li class="project__stack-item">CSS</li>
-            <!-- <li class="project__stack-item">React</li> -->
+            <!-- <li class="project__stack-item">React</li> 
           </ul>
 
           <a href="https://github.com/anuragaryanyt/profile" aria-label="source code" class="link link--icon">
@@ -141,7 +141,7 @@
           </a>
           <a href="https://rajaryan.netlify.app" aria-label="live preview" class="link link--icon">
             <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-          </a>
+          </a>-->
         </div>
 
 
