--- a/index.html
+++ b/index.html
@@ -125,21 +125,25 @@
 
 
         <div class="project">
-          <h3>Portfolio Website</h3>
+          <h3>Travel Booking</h3>
           <p class="project__description">
-            Built with HTML and CSS, my portfolio website highlights my projects and skills in a sleek, user-friendly
-            interface. Explore my work and achievements in a visually appealing environment.
+            - This is mini project with landing page.
+            <br>
+            - Responsive for another device
+            <br>
+            - Animations
           </p>
           <ul class="project__stack">
-            <li class="project__stack-item">HTML</li>
-            <li class="project__stack-item">CSS</li>
+            <li class="project__stack-item">ReactJS</li>
+            <li class="project__stack-item">Css</li>
             <!-- <li class="project__stack-item">React</li> -->
           </ul>
 
-          <a href="https://github.com/anuragaryanyt/profile" aria-label="source code" class="link link--icon">
+          <a href="https://github.com/TuanLinh54/Travels-booking/tree/master" aria-label="source code"
+            class="link link--icon">
             <i aria-hidden="true" class="fab fa-github"></i>
           </a>
-          <a href="https://rajaryan.netlify.app" aria-label="live preview" class="link link--icon">
+          <a href="https://travels-booking-kappa.vercel.app/" aria-label="live preview" class="link link--icon">
             <i aria-hidden="true" class="fas fa-external-link-alt"></i>
           </a>
         </div>
