--- a/index.html
+++ b/index.html
@@ -161,14 +161,16 @@
             <br>
             - Shop features: cart, order,...
             <br>
-            - Manage users (admin)
+            - Manage users (admin panel)
             <br>
-            - Manage product (admin)
+            - Manage product (admin panel)
           </p>
           <ul class="project__stack">
             <li class="project__stack-item">ReactJS + Vite</li>
             <li class="project__stack-item">Tailwind Css</li>
             <li class="project__stack-item">NodeJS (ExpressJS)</li>
+            <li class="project__stack-item">MongoDB</li>
+            <li class="project__stack-item">Redux Toolkit</li>
             <li class="project__stack-item">Shadcn UI</li>
             <!-- <li class="project__stack-item">React</li> -->
           </ul>
