--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/fa62c117c7.js" crossorigin="anonymous"></script>
   <!-- <link rel="icon" type="image/x-icon" href="/icons/Screenshot 2024-07-24 113355.png"> -->
-  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="./styles.css" />
   <script src="https://kit.fontawesome.com/4938320a9b.js" crossorigin="anonymous"></script>
   <title>Tuan Linh - Portfolio</title>
 </head>
@@ -37,7 +37,7 @@
         </li>
 
         <li class="nav__list-item">
-          <a class="link link--nav" href="#certificates">Certificates</a>
+          <a class="link link--nav" href="#certificate">Certificates</a>
         </li>
 
         <li class="nav__list-item">
@@ -235,14 +235,15 @@
     </section>
 
 
-    <!-- Education -->
+    <!-- Certificate -->
 
-    <section class="section skills" id="education">
-      <h2 class="section__title">Education</h2>
-      <div style="text-align: center;">
-        <img src="./icons/school.jpg" alt="" class="imgEducation">
-        <br>
-        <span class="textEducation">University of Natural Resources and Environment, Ho Chi Minh City</span>
+    <section class="section skills" id="certificate">
+      <h2 class="section__title">Certificates</h2>
+      <div class="certificates__grid">
+        <div class="project">
+          <h3>Front End Freecodecamp</h3>
+          <img src="./icons/freecodecamp-certifies.png" class="imgCertificate">
+        </div>
       </div>
     </section>
 
