--- a/index.html
+++ b/index.html
@@ -236,16 +236,35 @@
 
 
     <!-- Certificate -->
-
-    <section class="section skills" id="certificate">
+    <section class="section certificate" id="certificate">
       <h2 class="section__title">Certificates</h2>
       <div class="certificates__grid">
-        <div class="project">
-          <h3>Front End Freecodecamp</h3>
+        <div class="certificate_item">
           <img src="./icons/freecodecamp-certifies.png" class="imgCertificate">
+          <a href="https://www.freecodecamp.org/certification/HuynhVoTuanLinh/front-end-development-libraries">
+            <h4>Front End Development Libraries
+              (Freecodecamp)
+            </h4>
+          </a>
+        </div>
+        <div class="certificate_item">
+          <img src="./icons/react-hackerrank.png" class="imgCertificate">
+          <a href="https://www.hackerrank.com/certificates/ff2564315adc">
+            <h4>Front End Developer - React
+              (HackerRank)
+            </h4>
+          </a>
+        </div>
+        <div class="certificate_item">
+          <img src="./icons/Javascript basic - hackerrank.png" class="imgCertificate">
+          <a href="https://www.hackerrank.com/certificates/242c2ef8accb">
+            <h4>Javascript Basic (HackerRank)</h4>
+          </a>
         </div>
       </div>
     </section>
+
+
 
 
     <!-- Contact -->
